@@ -1,11 +1,14 @@
 package eu.dzhw.fdz.metadatamanagement.studymanagement.domain;
 
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashSet;
+import java.util.Set;
+
 import eu.dzhw.fdz.metadatamanagement.common.domain.I18nString;
 import eu.dzhw.fdz.metadatamanagement.common.domain.ImmutableI18nString;
 import eu.dzhw.fdz.metadatamanagement.surveymanagement.domain.DataTypes;
 import eu.dzhw.fdz.metadatamanagement.surveymanagement.domain.Survey;
-
-import java.util.Set;
 
 /**
  * List of types of data, which a {@link Study} can consist of. It will be computed from the
@@ -16,6 +19,6 @@ public class SurveyDataTypes extends DataTypes {
   public static final I18nString MIXED_METHODS =
       new ImmutableI18nString("Mixed Methods", "Mixed Methods");
 
-  public static final Set<I18nString> ALL = Set.of(QUANTITATIVE_DATA, QUALITATIVE_DATA,
-      MIXED_METHODS);
+  public static final Set<I18nString> ALL = Collections.unmodifiableSet(
+      new HashSet<>(Arrays.asList(QUANTITATIVE_DATA, QUALITATIVE_DATA, MIXED_METHODS)));
 }
